re PR debug/42918 ("-fcompare-debug failure" with "-O2 -ftracer" (2))

PR debug/42918
	* caller-save.c (save_call_clobbered_regs): If BB ends with
	a DEBUG_INSN, move any notes in between last real insn and the last
	DEBUG_INSN after the last DEBUG_INSN.

	* gcc.dg/pr42918.c: New test.

From-SVN: r156823